fix: gap fix

--- a/src/components/personalData/navigationBlock/navigationBlock.module.scss
+++ b/src/components/personalData/navigationBlock/navigationBlock.module.scss
@@ -48,6 +48,10 @@
 			height: 24px;
 		}
 	}
+
+	.navigationListWrap {
+		gap: 42px;
+	}
 }
 
 @media (max-width: 1441px) {
